#PROJECT(StitchingLineTest)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIC}/lib)

STRING(TOUPPER ${PROJECT_NAME} PROJECT_NAME_CAPITALIZED)

ADD_DEFINITIONS(-DUNICODE)

SET(PROGRAM_TARGETS
SeedFillTest
SuperSeedsTest
BoundaryFillTest
)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})


FOREACH(TARGET_NAME ${PROGRAM_TARGETS})
	ADD_EXECUTABLE( ${TARGET_NAME} ${TARGET_NAME}.cpp )
	ADD_DEPENDENCIES(${TARGET_NAME} Seeds )
	TARGET_LINK_LIBRARIES(${TARGET_NAME} Seeds ${OpenCV_LIBS})
	#SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES DEFINE_SYMBOL ${PROJECT_NAME_CAPITALIZED}_LIB)#
	SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER examples)
ENDFOREACH(TARGET_NAME)
